--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   command="ng build"
-  publish="dist/Livre_Recettes"
+  publish="dist/livre-recettes/browser"
 
 [[redirects]]
   from = "/*"
