--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^17.1.0",
     "@angular/platform-browser-dynamic": "^17.1.0",
     "@angular/router": "^17.1.0",
+    "@netlify/angular-runtime": "^2.0.4",
     "@netlify/plugin-angular-universal": "^1.0.1",
     "bootstrap": "^3.4.1",
     "rxjs": "~7.8.0",
@@ -36,7 +37,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "netlify-plugin-cypress": "^2.2.1",
+    "netlify-plugin-cypress": "^2.2.0",
     "typescript": "~5.3.2"
   }
 }
