--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve -host 0.0.0.0",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -18,7 +18,7 @@
     "@angular/platform-browser": "^17.1.0",
     "@angular/platform-browser-dynamic": "^17.1.0",
     "@angular/router": "^17.1.0",
-    "@netlify/angular-runtime": "^2.0.4",
+    "cypress": "^10.0.3",
     "bootstrap": "^3.4.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -29,14 +29,14 @@
     "@angular/cli": "^17.1.1",
     "@angular/compiler-cli": "^17.1.0",
     "@types/jasmine": "~5.1.0",
-    "cypress": "^13.6.3",
+    "@types/node": "^16.0.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "netlify-plugin-cypress": "^2.2.0",
+    "netlify-plugin-cypress": "~2.2.1",
     "typescript": "~5.3.2"
   }
 }
